# secure-software-design

./: LICENSE
lab/car-dealearship/: vehicles.txt
lab/car-dealearship/src/: Car.java  Dealer.java  Main.java  Motorbike.java  Vehicle.java
lab/dealer/: default.csv  pyproject.toml
lab/dealer/dealer/: app.py  domain.py
lab/dealer/tests/.pytest_cache/v/cache/: nodeids
lab/dealer/tests/dealer/: test_app.py  test_domain.py  test_menu.py
lab/dealer/tests/validation/: test_dataclasses.py
lab/theater/src/: Armchair.java  FiscalCode.java  Main.java  Name.java  Person.java  Theater.java
preparazione-esame/: brainstorming.txt
preparazione-esame/django/: exercise2-2  exercise2-3  new-django-project-with-poetry.sh
preparazione-esame/django/base_project/: db.sqlite3  pyproject.toml
preparazione-esame/django/base_project/app/: models.py
preparazione-esame/django/base_project/base_project/: settings.py
preparazione-esame/django/exercise_2-2/: db.sqlite3
preparazione-esame/django/exercise_2-2_like/: 1.txt  2.txt  3.txt  4.txt  5.txt
preparazione-esame/django/exercise_2-2_like4/: db.sqlite3
preparazione-esame/django/exercise_2-3/: db.sqlite3
preparazione-esame/django/exercise_2-3_like/: 1.txt  2.txt  3.txt  4.txt
preparazione-esame/django/exercise_2-3_like/2-3_like1/: db.sqlite3  pyproject.toml
preparazione-esame/django/exercise_2-3_like/2-3_like1/app/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
preparazione-esame/django/exercise_2-3_like/2-3_like1/app/migrations/: 0008_delete_product.py
preparazione-esame/django/my_blog_api/: db.sqlite3  manage.py  pyproject.toml  pytest.ini
preparazione-esame/django/my_blog_api/front-end-test/: index.html  python-tui-reloaded.py  python-tui.py
preparazione-esame/django/my_blog_api/my_blog_api/: asgi.py  settings.py  urls.py  wsgi.py
preparazione-esame/django/my_blog_api/posts/: models.py  permissions.py  urls.py  validators.py  views.py
preparazione-esame/django/my_blog_api/posts/migrations/: 0001_initial.py
preparazione-esame/django/my_blog_api/tests/posts/: test_models.py  test_urls.py
preparazione-esame/medical_office/medical_office/: medical_office.csv  office.py
preparazione-esame/medical_office/menu/: menu.py
preparazione-esame/music_archive/music_archive/: app.py  archive.py  domain.py  music_archive.csv
preparazione-esame/other-stuff/tests-with-dataclasses-and-typechecked/: pyproject.toml
preparazione-esame/other-stuff/tests-with-dataclasses-and-typechecked/tests_with_dataclasses_and_typechecked/: exercise.py
preparazione-esame/tdd/: new-tdd-project-with-poetry.sh
preparazione-esame/tdd/exercise_2-1simulation/: pyproject.toml
preparazione-esame/tdd/exercise_2-1simulation/exercise_2_1simulation/: exercise.py
preparazione-esame/tdd/exercise_2-1simulation/tests/: test_exercise.py
preparazione-esame/tdd/exercise_2-1simulation_alt1/: pyproject.toml  traccia.txt
preparazione-esame/tdd/exercise_2-1simulation_alt1/exercise_2_1simulation_alt1/: exercise.py
preparazione-esame/tdd/exercise_2-1simulation_alt1/tests/: test_exercise.py
preparazione-esame/tdd/exercise_2-1simulation_alt2/: brief.txt  pyproject.toml
preparazione-esame/tdd/exercise_2-1simulation_alt3/: brief.txt  pyproject.toml
preparazione-esame/tennis/: tennis.py  test_tennis.py
preparazione-esame/tui/medical_office/: brief  pyproject.toml
preparazione-esame/tui/medical_office/medical_office/: app.py  domain.py
preparazione-esame/tui/medical_office/tests/: test_domain.py
preparazione-esame/tui/music_archive/: brief  pyproject.toml
preparazione-esame/tui/music_archive/menu/: menu.py
preparazione-esame/tui/music_archive/music_archive/: app.py  archive.py  music_archive.csv
preparazione-esame/tui/music_archive/tests/music_archive/: test_app.py  test_domain.py
preparazione-esame/tui/music_archive/utils/: constants.py
(+63 files in other folders)
