[tool.poetry]
name = "exercise-2-1simulation-alt1"
version = "0.1.0"
description = ""
authors = ["ilveron <alessandromonetti@outlook.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.4"
valid8 = "^5.1.2"
typeguard = "^4.1.5"
dataclass-type-validator = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
