[tool.poetry]
name = "medical-office"
version = "0.1.0"
description = ""
authors = ["ilveron <alessandromonetti@outlook.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
valid8 = "^5.1.2"
typeguard = "^4.1.5"
dataclass-type-validator = "^0.1.2"
coverage = "^7.4.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
