[tool.poetry]
name = "music-archive"
version = "0.1.0"
description = ""
authors = ["ilveron <alessandromonetti@outlook.it>"]

[tool.poetry.dependencies]
python = "^3.10"
valid8 = "^5.1.2"
typeguard = "^4.1.5"
dataclass-type-validator = "^0.1.2"
coverage = "^7.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
